tests/errors/arrays/mixed-element-types.fn
---
Description: Array literal with mixed numeric element types
Expected: FN3708
---

type Program
{
    static fn Main -> i32
    {
        var mixed = [1, 2.0, 3]
        return 0
    }
}
